# ftp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
examples/: 01_basic_upload_download.ring  02_directory_operations.ring  03_file_management.ring  04_progress_tracking.ring  05_method_chaining.ring  06_secure_ftps.ring  07_custom_commands.ring  08_batch_upload.ring
lib/macos/amd64/: libring_ftp.dylib
lib/macos/arm64/: libring_ftp.dylib
src/: ftp.rh  ftp.ring
src/c_src/: ftpclient.h  ring_ftp.c
src/utils/: color.ring  install.ring  uninstall.ring
